# emv-card-simulator

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  SECURITY.md  build.gradle  default.nix  gradle.lockfile  gradle.properties
.github/workflows/: codeql-analysis.yml  dockerimage.yml  snyk-analysis.yml  update-dependencies.yml
config/checkstyle/: checkstyle.xml
gradle/: verification-metadata.xml
gradle/dependency-locks/: checkstyle.lockfile  gp.lockfile  javacardAntTask.lockfile  runtimeClasspath.lockfile  testCompileClasspath.lockfile  testRuntimeClasspath.lockfile
nix/: sources.json
src/main/java/emvcardsimulator/: ApduLog.java  EmvApplet.java  EmvTag.java  PaymentApplication.java  PaymentSystemEnvironment.java  ReadRecord.java  TagTemplate.java
src/main/java/emvcardsimulator/pse/: PaymentSystemEnvironment.java
src/main/rust/cardtool/: Cargo.toml
src/main/rust/cardtool/src/: main.rs
src/main/rust/config/: AFFFFFFFFF_92_ca_private_key.pem  card_setup_app_apdus-spankki.yaml  card_setup_app_apdus.yaml  card_setup_pse_apdus.yaml  download_log_pse_apdus.yaml  emv_tags.yaml  icc_1234560012345608_e_3_private_key.pem  iin_313233343536_e_3_private_key.pem  settings.yaml  setup_fuzzing_apdus.yaml
src/test/java/config/: card_log_consume_apdus.yaml  card_setup_app_apdus.yaml  card_setup_pse_apdus.yaml  emv_tags.yaml  log4rs.yaml  scheme_ca_public_keys_test.yaml  settings.yaml
src/test/java/emvcardsimulator/: PaymentApplicationContainer.java  PaymentApplicationTest.java  PaymentSystemEnvironmentContainer.java  PaymentSystemEnvironmentTest.java  SimulatorTest.java  SmartCard.java
src/test/java/emvcardsimulator/pse/: PaymentSystemEnvironmentContainer.java  PaymentSystemEnvironmentTest.java
src/test/rust/simulator/: Cargo.toml
src/test/rust/simulator/src/: lib.rs
