[package]
name = "cardtool"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emvpt = { git = "https://github.com/mrautio/emvpt", version = "0.1.0" }
log = "0.4.14"
log4rs = "1.0.0"
clap = "2.33.3"
hex = "0.4.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
pcsc = "2.4.0"
regex = "1.4.5"

