[package]
name = "simulator"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emvpt = { path = "../../../../../emvpt/emvpt", version = "0.1.0" }
jni = "0.17.0"
log = "0.4.8"
log4rs = "0.12.0"
hex = "0.4.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_yaml = "0.8.13"

[lib]
crate_type = ["cdylib"]
