[package]
name = "simulator"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emvpt = { git = "https://github.com/mrautio/emvpt", version = "0.1.0" }
jni = "0.18.0"
log = "0.4.11"
log4rs = "1.0.0"
hex = "0.4.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"

[lib]
crate_type = ["cdylib"]
