[package]
name = "simulator"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emvpt = { git = "https://github.com/mrautio/emvpt", version = "0.1.0" }
jni = "0.19.0"
log = "0.4.19"
log4rs = "1.2.0"
hex = "0.4.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.8.26"

[lib]
crate_type = ["cdylib"]
